samples/_failures_safe/1761318137_55e65a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38dab7e7.c: In function ‘main’:
./samples/SAFE/__tmp_38dab7e7.c:128:44: error: expected ‘)’ at end of input
  128 |             print_matrix(rows, cols, result
      |                         ~                  ^
      |                                            )
./samples/SAFE/__tmp_38dab7e7.c:128:13: error: expected declaration or statement at end of input
  128 |             print_matrix(rows, cols, result
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_38dab7e7.c:128:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38dab7e7.c:128:13: error: expected declaration or statement at end of input
